I messed up, mb fixed
The css was messed up cause I don't think

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -121,14 +121,14 @@ button {
   position: relative;
 }
 
-main {
+.login {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
 }
 
-main div {
+.login div {
   background-color: #ffffff;
   padding: 40px;
   border: 1px solid #dadce0;
@@ -137,46 +137,46 @@ main div {
   width: 100%;
 }
 
-main h2 {
+.login h2 {
   text-align: center;
   font-size: 30px;
   margin-bottom: 30px;
 }
 
-section {
+.login section {
   margin-bottom: 30px;
 }
 
-.title {
+.login .title {
   font-size: 1.4rem;
   font-weight: 600;
 }
-.text {
+.login .text {
   text-align: center;
   border: 0;
   padding-bottom: 20px;
   padding-top: 0;
 }
-.inputs {
+.login .inputs {
   display: flex;
   flex-direction: column;
   gap: 20px;
 }
 
-input {
+.login input {
   padding: 15px;
   font-size: 20px;
   border-radius: 5px;
   border: 1px solid #ccc;
   color: #242424;
 }
-small {
+.login small {
   text-decoration: underline;
   cursor: pointer;
   columns: var(--button-color);
 }
 
-button {
+.login button {
   padding: 10px 20px;
   font-size: 20px;
   background-color: var(--button-color);
@@ -187,12 +187,12 @@ button {
   transition: background-color 100ms ease-in-out;
 }
 
-button:hover {
+.login button:hover {
   transition: background-color 100ms ease-in-out;
   background-color: var(--hover-color);
 }
 
-hr {
+.login hr {
   border: none;
   border-top: 1px solid #ccc;
   margin-bottom: 30px;
